--- a/argocd/application-set.yaml
+++ b/argocd/application-set.yaml
@@ -22,7 +22,7 @@ spec:
       destination:
         server: 'https://kubernetes.default.svc'
         namespace: default
-      syncPolicy:
-        automated:
-          prune: true
-          selfHeal: true
+#      syncPolicy:
+#        automated:
+#          prune: true
+#          selfHeal: true
