--- a/apps/crossplane/provider-aws.yaml
+++ b/apps/crossplane/provider-aws.yaml
@@ -1,8 +1,8 @@
 # https://github.com/crossplane-contrib/provider-upjet-aws
 
-apiVersion: pkg.crossplane.io/v1
-kind: Provider
-metadata:
-  name: provider-aws-s3
-spec:
-  package: xpkg.upbound.io/upbound/provider-aws-s3:v1.17.0
+#apiVersion: pkg.crossplane.io/v1
+#kind: Provider
+#metadata:
+#  name: provider-aws-s3
+#spec:
+#  package: xpkg.upbound.io/upbound/provider-aws-s3:v1.17.0
