fix: add pv for open-webui.

--- a/apps/deepseek/ollama-deployment.yaml
+++ b/apps/deepseek/ollama-deployment.yaml
@@ -77,4 +77,4 @@ spec:
       volumes:
         - name: ollama-data
           persistentVolumeClaim:
-            claimName: deepseek-pvc
+            claimName: ollama-model-pvc
