--- a/apps/deepseek/kustomization.yaml
+++ b/apps/deepseek/kustomization.yaml
@@ -4,10 +4,11 @@ resources:
 # - https://raw.githubusercontent.com/NVIDIA/k8s-device-plugin/v0.17.0/deployments/static/nvidia-device-plugin.yml
  - device-plugin-daemonset.yaml
  - nvidia-runtimeclass.yaml
- - persistent-volume.yaml
+ - open-webui-pv.yaml
  - open-webui-deployment.yaml
  - open-webui-service.yaml
 # - ollama-application.yaml
+ - ollama-persistent-volume.yaml
  - ollama-deployment.yaml
  - ollama-service.yaml
 transformers:
