--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -1,15 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-  - application-set.yaml
-
+- namespace.yaml
+- https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+- application-set.yaml
+- projects.yaml
 transformers:
-  - |-
-    apiVersion: builtin
-    kind: NamespaceTransformer
-    metadata:
-      name: nst
-      namespace: argocd
-    unsetOnly: true
+- |-
+  apiVersion: builtin
+  kind: NamespaceTransformer
+  metadata:
+    name: nst
+    namespace: argocd
+  unsetOnly: true
