--- a/apps/crossplane/kustomization.yaml
+++ b/apps/crossplane/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - provider-aws.yaml
+  - provider-k8s.yaml
 transformers:
   - |-
     apiVersion: builtin
