Add crossplane-ansible setup for Raspberry Pi SSH connection and k3s deployment

--- a/apps/crossplane/kustomization.yaml
+++ b/apps/crossplane/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - provider-aws.yaml
   - provider-k8s.yaml
+  - provider-ansible.yaml
 transformers:
   - |-
     apiVersion: builtin
