Add required filename field to provider-ansible ProviderConfig

--- a/apps/crossplane/provider-ansible.yaml
+++ b/apps/crossplane/provider-ansible.yaml
@@ -11,7 +11,8 @@ metadata:
   name: ansible-provider-config
 spec:
   credentials:
-    - source: Secret
+    - filename: /tmp/ansible-ssh-key
+      source: Secret
       secretRef:
         namespace: crossplane-system
         name: raspberry-ssh
