--- a/apps/k3s/ansible-commands/master.yaml
+++ b/apps/k3s/ansible-commands/master.yaml
@@ -1,22 +1,49 @@
 apiVersion: ansible.crossplane.io/v1alpha1
-kind: Play
+kind: AnsibleRun
 metadata:
   name: k3s-master-setup
 spec:
   forProvider:
-    inventory:
-      hosts:
-        - name: rasp-111
-          vars:
+    playbook: |
+      ---
+      - name: Install K3s Master
+        hosts: all
+        become: yes
+        vars:
+          k3s_version: "{{ k3s_version }}"
+        tasks:
+          - name: Install K3s master
+            shell: |
+              curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION={{ k3s_version }} sh -s - server \
+                --disable traefik \
+                --write-kubeconfig-mode 644
+            args:
+              creates: /var/lib/rancher/k3s/server/node-token
+          
+          - name: Wait for node-token
+            wait_for:
+              path: /var/lib/rancher/k3s/server/node-token
+              state: present
+              timeout: 300
+          
+          - name: Get node token
+            slurp:
+              src: /var/lib/rancher/k3s/server/node-token
+            register: node_token
+          
+          - name: Set fact for node token
+            set_fact:
+              k3s_node_token: "{{ node_token.content | b64decode | trim }}"
+            
+          - name: Print completion message
+            debug:
+              msg: "K3s master node installation completed with version {{ k3s_version }}"
+    inventory: |
+      all:
+        hosts:
+          rasp-111:
             ansible_host: 192.168.0.111
             ansible_user: pi
-            ansible_ssh_private_key_file: /tmp/ansible-ssh-key
-            k3s_version: ${configmap:k3s-config:version}
-    playbook:
-      source: ConfigMap
-      configMapRef:
-        name: ansible-playbooks
-        namespace: crossplane-system
-        key: install-master.yaml
+            k3s_version: "${configmap:k3s-config:version}"
   providerConfigRef:
     name: ansible-provider-config
