--- a/apps/k3s/ansible-commands/worker.yaml
+++ b/apps/k3s/ansible-commands/worker.yaml
@@ -1,27 +1,42 @@
 apiVersion: ansible.crossplane.io/v1alpha1
-kind: Play
+kind: AnsibleRun
 metadata:
   name: k3s-worker-setup
   annotations:
     crossplane.io/external-name: k3s-worker-setup
 spec:
   forProvider:
-    inventory:
-      hosts:
-        - name: rasp-158
-          vars:
+    playbook: |
+      ---
+      - name: Install K3s Worker
+        hosts: all
+        become: yes
+        vars:
+          k3s_version: "{{ k3s_version }}"
+          master_ip: "{{ master_ip }}"
+          node_token: "{{ node_token }}"
+        tasks:
+          - name: Install K3s worker
+            shell: |
+              curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION={{ k3s_version }} \
+                K3S_URL=https://{{ master_ip }}:6443 \
+                K3S_TOKEN={{ node_token }} \
+                sh -
+            args:
+              creates: /var/lib/rancher/k3s/agent/kubelet.kubeconfig
+          
+          - name: Print completion message
+            debug:
+              msg: "K3s worker node installation completed with version {{ k3s_version }}"
+    inventory: |
+      all:
+        hosts:
+          rasp-158:
             ansible_host: 192.168.0.158
             ansible_user: pi
-            ansible_ssh_private_key_file: /tmp/ansible-ssh-key
-            k3s_version: ${configmap:k3s-config:version}
-            master_ip: 192.168.0.111
-            node_token: ${play:k3s-master-setup:k3s_node_token}
-    playbook:
-      source: ConfigMap
-      configMapRef:
-        name: ansible-playbooks
-        namespace: crossplane-system
-        key: install-worker.yaml
+            k3s_version: "${configmap:k3s-config:version}"
+            master_ip: "192.168.0.111"
+            node_token: "${ansiblerun:k3s-master-setup:k3s_node_token}"
   providerConfigRef:
     name: ansible-provider-config
   dependsOn:
