--- a/apps/k3s/ansible-commands/argocd.yaml
+++ b/apps/k3s/ansible-commands/argocd.yaml
@@ -2,9 +2,11 @@ apiVersion: ansible.crossplane.io/v1alpha1
 kind: AnsibleRun
 metadata:
   name: argocd-setup
+  annotations:
+    ansible.crossplane.io/runPolicy: ObserveAndDelete
 spec:
   forProvider:
-    playbook: |
+    playbookInline: |
       ---
       - name: Install ArgoCD on K3s
         hosts: all
