Add k3s-setup namespace and apply it to AnsibleRun resources

--- a/apps/k3s/ansible-commands/argocd.yaml
+++ b/apps/k3s/ansible-commands/argocd.yaml
@@ -2,6 +2,7 @@ apiVersion: ansible.crossplane.io/v1alpha1
 kind: AnsibleRun
 metadata:
   name: argocd-setup
+  namespace: k3s-setup
   annotations:
     ansible.crossplane.io/runPolicy: ObserveAndDelete
 spec:
