--- a/apps/k3s/ansible-commands/master.yaml
+++ b/apps/k3s/ansible-commands/master.yaml
@@ -2,6 +2,7 @@ apiVersion: ansible.crossplane.io/v1alpha1
 kind: AnsibleRun
 metadata:
   name: k3s-master-setup
+  namespace: k3s-setup
   annotations:
     ansible.crossplane.io/runPolicy: ObserveAndDelete
 spec:
