--- a/apps/secret-operator/awssm-secret.yaml.sample
+++ b/apps/secret-operator/awssm-secret.yaml.sample
@@ -7,3 +7,13 @@ type: Opaque
 stringData:
   access-key: KEYID
   secret-access-key: SECRETKEY
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: awssm-secret
+  namespace: k3s-setup
+type: Opaque
+stringData:
+  access-key: KEYID
+  secret-access-key: SECRETKEY
