--- a/apps/k3s/secret-store.yaml
+++ b/apps/k3s/secret-store.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: k3s-secretstore
-  namespace: crossplane-system
+  namespace: k3s-setup
 spec:
   provider:
     aws:
