--- a/apps/k3s/ssh-external-secret.yaml
+++ b/apps/k3s/ssh-external-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: raspberry-ssh
-  namespace: crossplane-system
+  namespace: k3s-setup
 spec:
   refreshInterval: "1h"
   secretStoreRef:
