--- a/apps/k3s/ansible-commands/master.yaml
+++ b/apps/k3s/ansible-commands/master.yaml
@@ -41,12 +41,13 @@ spec:
           - name: Print completion message
             debug:
               msg: "K3s master node installation completed with version {{ k3s_version }}"
-    inventory: |
-      all:
-        hosts:
+    inventories:
+      - hosts:
           rasp-111:
             ansible_host: 192.168.0.111
             ansible_user: pi
             k3s_version: "${configmap:k3s-config:version}"
+        secretRef:
+          namespace: crossplane-system
   providerConfigRef:
     name: ansible-provider-config
