--- a/apps/k3s/ansible-commands/test-connection.yaml
+++ b/apps/k3s/ansible-commands/test-connection.yaml
@@ -1,22 +1,31 @@
 apiVersion: ansible.crossplane.io/v1alpha1
-kind: Play
+kind: AnsibleRun
 metadata:
   name: test-ssh-connection-master
 spec:
   forProvider:
-    inventory:
+    inventoryInline:
       hosts:
         - name: rasp-111
           vars:
             ansible_host: 192.168.0.111
             ansible_user: pi
             ansible_ssh_private_key_file: /tmp/ansible-ssh-key
-    playbook:
-      source: ConfigMap
-      configMapRef:
-        name: ansible-playbooks
-        namespace: crossplane-system
-        key: test-connection.yaml
+    playbookInline:
+      - name: Test SSH connection
+        hosts: all
+        become: yes
+        tasks:
+          - name: Create a test file
+            file:
+              path: /tmp/ansible-test-file
+              state: touch
+              mode: '0644'
+          
+          - name: Write to test file
+            copy:
+              content: "Ansible test successful at {{ ansible_date_time.iso8601 }}"
+              dest: /tmp/ansible-test-file
   providerConfigRef:
     name: ansible-provider-config
 ---
