--- a/apps/k3s/configmaps/k3s-config.yaml
+++ b/apps/k3s/configmaps/k3s-config.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: k3s-config
-  namespace: crossplane-system
+  namespace: k3s-setup
 data:
   version: "v1.32.2+k3s1"
