--- a/apps/k3s/kustomization.yaml
+++ b/apps/k3s/kustomization.yaml
@@ -6,3 +6,11 @@ resources:
   - configmaps/
 #  - ansible-commands/
   - ansible-jobs/
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: NamespaceTransformer
+    metadata:
+      name: nst
+      namespace: k3s-setup
+    unsetOnly: true
