--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -17,6 +17,18 @@ spec:
         controllerServiceAccount:
           name: arc-controller-gha-rs-controller
           namespace: arc-system
+        template:
+          spec:
+            containers:
+              - name: runner
+                image: ghcr.io/actions/runner:latest
+                resources:
+                  requests:
+                    cpu: 2000m
+                    memory: 2Gi
+                  limits:
+                    cpu: 2000m
+                    memory: 2Gi
   destination:
     server: https://kubernetes.default.svc
     namespace: arc-runners
