--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -21,7 +21,8 @@ spec:
           spec:
             containers:
               - name: runner
-                image: ghcr.io/actions/runner:latest
+                image: ghcr.io/actions/actions-runner:latest
+                command: ["/home/runner/run.sh"]
                 resources:
                   requests:
                     cpu: 500m
