--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -18,6 +18,8 @@ spec:
         controllerServiceAccount:
           name: arc-controller-gha-rs-controller
           namespace: arc-system
+        containerMode:
+          type: "dind"
         template:
           spec:
             containers:
