--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -9,7 +9,8 @@ spec:
     repoURL: ghcr.io/actions/actions-runner-controller-charts
     chart: gha-runner-scale-set
 #    targetRevision: 0.11.0
-    targetRevision: 0.10.1
+#    targetRevision: 0.10.1
+    targetRevision: 0.8.3
     helm:
       values: |
         githubConfigUrl: "https://github.com/air-hand/k8s-playground"
