--- a/apps/arc/arc-controller-helm.yaml
+++ b/apps/arc/arc-controller-helm.yaml
@@ -9,7 +9,8 @@ spec:
     repoURL: ghcr.io/actions/actions-runner-controller-charts
     chart: gha-runner-scale-set-controller
 #    targetRevision: 0.11.0
-    targetRevision: 0.10.1
+#    targetRevision: 0.10.1
+    targetRevision: 0.8.3
   destination:
     server: https://kubernetes.default.svc
     namespace: arc-system
