--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -26,7 +26,7 @@ spec:
             initContainers:
               - name: sleep
                 image: busybox:stable
-                command: ["sh", "-c", "sleep 90"]
+                command: ["sh", "-c", "set -- 30 90 120; sleep $(eval echo \\${$((RANDOM%3+1))})"]
             containers:
               - name: runner
                 image: ghcr.io/actions/actions-runner:latest
