--- a/.github/workflows/hello-self-hosted-runner.yaml
+++ b/.github/workflows/hello-self-hosted-runner.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 #  schedule:
-    - cron: "*/10 * * * *" # test for every 10 minutes
+#    - cron: "*/10 * * * *" # test for every 10 minutes
   workflow_dispatch:
 
 permissions: {}
