--- a/.github/workflows/hello-self-hosted-runner.yaml
+++ b/.github/workflows/hello-self-hosted-runner.yaml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
 #        input: [1, 2, 3, 4, 5]
-        input: [1]
+        input: [1, 2]
     steps:
       - name: Hello world
         run: |
