--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -27,7 +27,8 @@ spec:
               - name: sleep
                 image: busybox:stable
                 #command: ["sh", "-c", "set -- 90 120; SLEEP_SEC=$(eval echo \\${$((RANDOM%2+1))}); echo \"Sleeping for $SLEEP_SEC seconds\"; sleep $SLEEP_SEC"]
-                command: ["sh", "-c", "sleep 120"]
+                command: ["sh", "-c", "set -- 1 120; SLEEP_SEC=$(eval echo \\${$((RANDOM%2+1))}); echo \"Sleeping for $SLEEP_SEC seconds\"; sleep $SLEEP_SEC"]
+                #command: ["sh", "-c", "sleep 120"]
             containers:
               - name: runner
                 image: ghcr.io/actions/actions-runner:latest
