--- a/.github/workflows/hello-self-hosted-runner.yaml
+++ b/.github/workflows/hello-self-hosted-runner.yaml
@@ -4,8 +4,8 @@ on:
 #  pull_request:
 #    branches:
 #      - main
-#  schedule:
-#    - cron: "*/10 * * * *" # test for every 10 minutes
+  schedule:
+    - cron: "*/10 * * * *" # test for every 10 minutes
   workflow_dispatch:
 
 permissions: {}
