chore: increase sleep seconds. (#10)
* chore: increase sleep seconds.

* downgrade to 0.10.1

* wip

* wip

* wip

* wip

* wip

* up to 0.11.0

* to 0.8.3

* Revert "to 0.8.3"

This reverts commit 2c8de5aba852da4384a7ec0dee5e4d20bdd92106.

* Reapply "to 0.8.3"

This reverts commit f13f0f818b9a8e18c551cdd5921bdcccbdf0080a.

* Revert "Reapply "to 0.8.3""

This reverts commit 1fe48571222919b3d4fe3fe38593acb9ff271c63.

* chore: enable on.schedule.

--- a/.github/workflows/hello-self-hosted-runner.yaml
+++ b/.github/workflows/hello-self-hosted-runner.yaml
@@ -4,8 +4,8 @@ on:
 #  pull_request:
 #    branches:
 #      - main
-#  schedule:
-#    - cron: "*/10 * * * *" # test for every 10 minutes
+  schedule:
+    - cron: "*/10 * * * *" # test for every 10 minutes
   workflow_dispatch:
 
 permissions: {}
@@ -17,11 +17,11 @@ jobs:
       fail-fast: false
       matrix:
 #        input: [1, 2, 3, 4, 5]
-        input: [1]
+        input: [1, 2]
     steps:
       - name: Hello world
         run: |
           echo "Hello world ${INPUT}"
-          sleep 30s
+          sleep 90s
         env:
           INPUT: ${{ matrix.input }}
