add ignored secret.yaml

--- a/apps/secret-operator/kustomization.yaml
+++ b/apps/secret-operator/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - secret-operator-helm.yaml
   - secret-store.yaml
+  - awssm-secret.yaml
 transformers:
   - |-
     apiVersion: builtin
