--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -23,7 +23,7 @@ spec:
           spec:
             containers:
               - name: runner
-                image: ghcr.io/actions/actions-runner:latest
+                image: ghcr.io/actions/actions-runner:2.326.0
                 command: ["/home/runner/run.sh"]
                 resources:
                   requests:
