--- a/.github/workflows/hello-self-hosted-runner.yaml
+++ b/.github/workflows/hello-self-hosted-runner.yaml
@@ -44,22 +44,24 @@ jobs:
           cat /proc/self/cgroup
           echo "=== Container limits ==="
           cat /proc/meminfo | grep -E "(MemTotal|MemAvailable)"
-      - name: install stress-ng
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y stress-ng
-      - name: stress-ng
-        run: |
-          # OOM killed with 1GB memory runner
-          stress-ng --vm 4 --vm-bytes 4192M --timeout 60s
+      #- name: install stress-ng
+      #  run: |
+      #    sudo apt-get update
+      #    sudo apt-get install -y stress-ng
+      #- name: stress-ng
+      #  run: |
+      #    # OOM killed with 1GB memory runner
+      #    stress-ng --vm 4 --vm-bytes 4192M --timeout 60s
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       - name: oom
         run: |
           python3 -c "
-          data = bytearray(1300 * 1024 * 1024)  # 1.3GB一気に確保
-          print('Allocated 1.3GB')
+          import gc
+          gc.disable()
+          data = bytearray(2300 * 1024 * 1024)  # 1.3GB一気に確保
+          print('Allocated 2.3GB')
           import time
           time.sleep(30)
           " || echo "Python process was killed with exit code: $?"
