--- a/.github/workflows/hello-self-hosted-runner.yaml
+++ b/.github/workflows/hello-self-hosted-runner.yaml
@@ -66,4 +66,4 @@ jobs:
           time.sleep(30)
           " || echo "Python process was killed with exit code: $?"
       - name: test
-        run: Hello world!!
+        run: echo "Hello world!!"
