--- a/apps/arc/arc-runners-helm.yaml
+++ b/apps/arc/arc-runners-helm.yaml
@@ -17,10 +17,12 @@ spec:
         controllerServiceAccount:
           name: arc-controller-gha-rs-controller
           namespace: arc-system
-        #containerMode:
-        #  type: "dind"
         template:
           spec:
+            #initContainers:
+            #  - name: runner-init
+            #    image: busybox:stable
+            #    command: ["/bin/sh", "-c", "sleep 120"]
             containers:
               - name: runner
                 image: ghcr.io/actions/actions-runner:2.326.0
@@ -28,10 +30,10 @@ spec:
                 resources:
                   requests:
                     cpu: 500m
-                    memory: 1Gi
+                    memory: 1500m
                   limits:
                     cpu: 500m
-                    memory: 1Gi
+                    memory: 1500m
             tolerations:
               - key: "dedicated"
                 operator: "Equal"
