--- a/apps/deepseek/kustomization.yaml
+++ b/apps/deepseek/kustomization.yaml
@@ -1,16 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-# - https://raw.githubusercontent.com/NVIDIA/k8s-device-plugin/v0.17.0/deployments/static/nvidia-device-plugin.yml
- - device-plugin-daemonset.yaml
- - nvidia-runtimeclass.yaml
- - open-webui-pv.yaml
- - open-webui-deployment.yaml
- - open-webui-service.yaml
-# - ollama-application.yaml
- - ollama-persistent-volume.yaml
- - ollama-deployment.yaml
- - ollama-service.yaml
+#resources:
+## - https://raw.githubusercontent.com/NVIDIA/k8s-device-plugin/v0.17.0/deployments/static/nvidia-device-plugin.yml
+# - device-plugin-daemonset.yaml
+# - nvidia-runtimeclass.yaml
+# - open-webui-pv.yaml
+# - open-webui-deployment.yaml
+# - open-webui-service.yaml
+## - ollama-application.yaml
+# - ollama-persistent-volume.yaml
+# - ollama-deployment.yaml
+# - ollama-service.yaml
 transformers:
   - |-
     apiVersion: builtin
