--- a/apps/deepseek/kustomization.yaml
+++ b/apps/deepseek/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-#resources:
+resources:
 ## - https://raw.githubusercontent.com/NVIDIA/k8s-device-plugin/v0.17.0/deployments/static/nvidia-device-plugin.yml
-# - device-plugin-daemonset.yaml
-# - nvidia-runtimeclass.yaml
+ - device-plugin-daemonset.yaml
+ - nvidia-runtimeclass.yaml
 # - open-webui-pv.yaml
 # - open-webui-deployment.yaml
 # - open-webui-service.yaml
