--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 - application-set.yaml
 - projects.yaml
 patches:
-- path: argocd-cm-patches.yaml
+- path: argocd-patches.yaml
 transformers:
 - |-
   apiVersion: builtin
