--- a/apps/secret-operator/secret-store.yaml
+++ b/apps/secret-operator/secret-store.yaml
@@ -3,6 +3,8 @@ kind: SecretStore
 metadata:
   name: secretstore-aws
   namespace: arc-runners # TODO
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   provider:
     aws:
