--- a/apps/arc/external-secret.yaml
+++ b/apps/arc/external-secret.yaml
@@ -3,6 +3,8 @@ kind: ExternalSecret
 metadata:
   name: gh-secret
   namespace: arc-runners
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   refreshInterval: 1h
   secretStoreRef:
